# Parser_Tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  SETUP.md  ahsdp_app.py  pyproject.toml  run_app.py
docs/: how_to_run_mock_ahs_generator.md
docs/onboarding/: ONBOARDING.md
docs/operability/: TROUBLESHOOTING.md
docs/security/: THREAT_MODEL.md
exports/: report.md
legal/: EULA.txt
policy/: CODE_OF_CONDUCT.md  PRIVACY.md  SECURITY.md
src/ahsdp/: cli.py  core.py  diagnostics.py  faults.py  gui.py  identity.py  parse_bb.py  parse_nonbb.py  redact.py  report.py  safe_extract.py
tests/: test_bb_faults.py  test_diagnostics.py  test_identity.py  test_parse_bcert.py  test_parse_nonbb.py  test_report.py  test_report_summary.py
tests/fixtures/: demo_data_generator.py  mock_ahs_generator.py
tests/fixtures/demo_data/: README.txt  bcert.pkg.xml  demo2.ahs  file.pkg.txt  sample.bb
